@@ -18,6 +18,8 @@
 ##
 ################################################################################
 
+set(MANTA_EXECUTABLE_PERMISSIONS OWNER_WRITE OWNER_READ GROUP_READ WORLD_READ OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE)
+set(MANTA_LIBRARY_PERMISSIONS OWNER_WRITE OWNER_READ GROUP_READ WORLD_READ)
 
 install(CODE "
 
@@ -34,10 +36,5 @@ install(CODE "
     get_filename_component(MANTA_FULL_LIBDIR         \"\${FULL_PREFIX}${MANTA_LIBDIR}\" ABSOLUTE)
     get_filename_component(MANTA_FULL_LIBEXECDIR     \"\${FULL_PREFIX}${MANTA_LIBEXECDIR}\" ABSOLUTE)
     get_filename_component(MANTA_FULL_PYTHON_LIBDIR  \"\${FULL_PREFIX}${MANTA_PYTHON_LIBDIR}\" ABSOLUTE)
-
-    set(MANTA_FULL_VERSION \"${MANTA_FULL_VERSION}\")
-    set(MANTA_VERSION \"${MANTA_VERSION}\")
-    set(MANTA_EXECUTABLE_PERMISSIONS OWNER_WRITE OWNER_READ GROUP_READ WORLD_READ OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE)
-    set(MANTA_LIBRARY_PERMISSIONS OWNER_WRITE OWNER_READ GROUP_READ WORLD_READ)
     ")
 
