@@ -10,15 +10,14 @@
 # <https://github.com/sequencing/licenses/>
 #
 
-include ("${MANTA_GLOBALS_CMAKE}")
+include ("${MANTA_MACROS_CMAKE}")
+configure_files ("${CMAKE_CURRENT_SOURCE_DIR}" "${CMAKE_CURRENT_BINARY_DIR}" "*.py")
+configure_files ("${CMAKE_CURRENT_SOURCE_DIR}" "${CMAKE_CURRENT_BINARY_DIR}" "*.ini")
 
-install(CODE "
-    include (\"${MANTA_MACROS_CMAKE}\")
-    configure_files (\"${CMAKE_CURRENT_SOURCE_DIR}\" \"${CMAKE_CURRENT_BINARY_DIR}\" \"*.py\")
-    install_files (\"${CMAKE_CURRENT_BINARY_DIR}\" \"\${MANTA_FULL_BINDIR}\" \"*.py\"
-                   \"\${MANTA_EXECUTABLE_PERMISSIONS}\")
-    configure_files (\"${CMAKE_CURRENT_SOURCE_DIR}\" \"${CMAKE_CURRENT_BINARY_DIR}\" \"*.ini\")
-    install_files (\"${CMAKE_CURRENT_BINARY_DIR}\" \"\${MANTA_FULL_BINDIR}\" \"*.ini\"
-                   \"\${MANTA_LIBRARY_PERMISSIONS}\")
-    ")
+include ("${MANTA_GLOBALS_CMAKE}") # required for *_PERMISSIONS values
+
+install_files ("${CMAKE_CURRENT_BINARY_DIR}" "${MANTA_BINDIR}" "*.py"
+               "${MANTA_EXECUTABLE_PERMISSIONS}")
+install_files ("${CMAKE_CURRENT_BINARY_DIR}" "${MANTA_BINDIR}" "*.ini"
+               "${MANTA_LIBRARY_PERMISSIONS}")
 
